Logging and Test for TypeDescriptor and DocDescriptor

--- a/DesktopSearch.Core/DesktopSearch.Core.csproj
+++ b/DesktopSearch.Core/DesktopSearch.Core.csproj
@@ -333,6 +333,8 @@
     <Compile Include="Utils\Async\AggregatingProgressReporter.cs" />
     <Compile Include="Utils\CollectionExtensions.cs" />
     <Compile Include="Utils\EnumExt.cs" />
+    <Compile Include="Utils\LoggedIds.cs" />
+    <Compile Include="Utils\Logging.cs" />
     <Compile Include="Utils\Performance.cs" />
     <Compile Include="Utils\Utils\TermHelper.cs" />
   </ItemGroup>
