Added Language detection

--- a/DesktopSearch.Core/DesktopSearch.Core.csproj
+++ b/DesktopSearch.Core/DesktopSearch.Core.csproj
@@ -338,6 +338,7 @@
     <Compile Include="Utils\LoggedIds.cs" />
     <Compile Include="Utils\Logging.cs" />
     <Compile Include="Utils\Performance.cs" />
+    <Compile Include="Utils\TextUtil.cs" />
     <Compile Include="Utils\Utils\TermHelper.cs" />
   </ItemGroup>
   <ItemGroup>
