--- a/Test/DesktopSearch.Core.Tests/DesktopSearch.Core.Tests.csproj
+++ b/Test/DesktopSearch.Core.Tests/DesktopSearch.Core.Tests.csproj
@@ -287,6 +287,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DocumentCollectionConfigStoreTests.cs" />
     <Compile Include="Utils\CfgMocks.cs" />
+    <Compile Include="Utils\TextUtilTests.cs" />
     <Compile Include="Utils\EnumExtTests.cs" />
     <Compile Include="Utils\CollectionExtensionsTests.cs" />
     <Compile Include="Utils\LoggingInterceptor.cs" />
