--- a/Test/DesktopSearch.Core.Tests/DesktopSearch.Core.Tests.csproj
+++ b/Test/DesktopSearch.Core.Tests/DesktopSearch.Core.Tests.csproj
@@ -262,8 +262,7 @@
     <Compile Include="DataModel\Documents\DocumentCollectionTests.cs" />
     <Compile Include="DependencyInjection\SimpleInjector_using_PropertyInjection.cs" />
     <Compile Include="DependencyInjection\Using_SimpleInjector_to_inject_Logger.cs" />
-    <Compile Include="ElasticSearch\ManagementServiceTests.cs" />
-    <Compile Include="ElasticSearch\Parser\KeywordParserTests.cs" />
+    <Compile Include="Tika\KeywordParserTests.cs" />
     <Compile Include="FileSystem\ExcludeFileByExtensionFilterTests.cs" />
     <Compile Include="FileSystem\IncludeFileByExtensionFilterTests.cs" />
     <Compile Include="Helper\DockerControlClient.cs" />
@@ -304,7 +303,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <Compile Include="Services\CodeIndexing_IntegrationTests.cs" />
-    <Compile Include="Services\DocumentCollectionElasticStoreTests.cs" />
     <Compile Include="Services\DocumentCollectionRepository_AddDocumentCollection_Tests.cs" />
     <Compile Include="Services\DocumentCollectionRepository_AddFolderToDocumentCollection_Tests.cs" />
     <Compile Include="Services\DocumentCollectionRepository_Persistence_Tests.cs" />
