--- a/DesktopSearch.Core/packages.config
+++ b/DesktopSearch.Core/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Elasticsearch.Net" version="5.0.0" targetFramework="net461" />
+  <package id="Docker.DotNet" version="2.124.3" targetFramework="net461" />
   <package id="ICU4NET-ICU4C55.1-bin32" version="1.0.0" targetFramework="net461" />
   <package id="iTextSharp" version="5.5.10" targetFramework="net461" />
   <package id="Lucene.Net" version="4.8.0.770-beta" targetFramework="net461" />
@@ -23,12 +23,12 @@
   <package id="Microsoft.Extensions.Primitives" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="NEST" version="5.0.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="Nito.AsyncEx" version="4.0.1" targetFramework="net461" />
   <package id="SimpleInjector" version="3.3.2" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.0.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.3.0" targetFramework="net461" />
