--- a/DesktopSearch.PS/DesktopSearch.PS.csproj
+++ b/DesktopSearch.PS/DesktopSearch.PS.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Docker.DotNet, Version=2.124.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Docker.DotNet.2.124.3\lib\net46\Docker.DotNet.dll</HintPath>
+    </Reference>
     <Reference Include="DotNetProjects.DataVisualization.Toolkit, Version=5.0.33.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\DotNetProjects.Wpf.Toolkit.5.0.33\lib\net40\DotNetProjects.DataVisualization.Toolkit.dll</HintPath>
     </Reference>
@@ -132,6 +135,9 @@
       <HintPath>..\packages\System.AppContext.4.3.0\lib\net46\System.AppContext.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Buffers, Version=4.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Buffers.4.0.0\lib\netstandard1.1\System.Buffers.dll</HintPath>
+    </Reference>
     <Reference Include="System.Collections.Immutable, Version=1.2.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Collections.Immutable.1.3.0\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
       <Private>True</Private>
@@ -211,6 +217,7 @@
       <HintPath>..\packages\System.Runtime.InteropServices.RuntimeInformation.4.3.0\lib\net45\System.Runtime.InteropServices.RuntimeInformation.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security.Cryptography.Algorithms, Version=4.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Security.Cryptography.Algorithms.4.3.0\lib\net461\System.Security.Cryptography.Algorithms.dll</HintPath>
       <Private>True</Private>
@@ -280,6 +287,7 @@
   <ItemGroup>
     <Compile Include="Cmdlets\AddDSDocumentCollectionCmdlet.cs" />
     <Compile Include="Cmdlets\AddDSFolderToDocumentCollectionCmdlet.cs" />
+    <Compile Include="Services\DockerCommands.cs" />
     <Compile Include="Cmdlets\OpenDSCodeCmdlet.cs" />
     <Compile Include="Cmdlets\ClearDSIndexCmdlet.cs" />
     <Compile Include="Cmdlets\EditTagCmdlet.cs" />
@@ -301,6 +309,7 @@
     <Compile Include="Cmdlets\GetDSSettingCmdlet.cs" />
     <Compile Include="Composition\IHost.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\KeywordSuggestionService.cs" />
     <Compile Include="UI\Behaviors\CloseWindowBehavior.cs" />
     <Compile Include="UI\DialogFactory.cs" />
     <Compile Include="Services\IKeywordSuggestions.cs" />
