--- a/DesktopSearch.PS/packages.config
+++ b/DesktopSearch.PS/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
+  <package id="Docker.DotNet" version="2.124.3" targetFramework="net461" />
   <package id="DotNetProjects.Wpf.Toolkit" version="5.0.33" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="3.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net461" />
@@ -25,6 +26,7 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="PowershellExtensions" version="0.7.0" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.0.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.3.0" targetFramework="net461" />
