--- a/Test/DesktopSearch.Core.Tests/DesktopSearch.Core.Tests.csproj
+++ b/Test/DesktopSearch.Core.Tests/DesktopSearch.Core.Tests.csproj
@@ -256,7 +256,12 @@
     <Compile Include="DataModel\Documents\DocumentCollectionTests.cs" />
     <Compile Include="DependencyInjection\SimpleInjector_using_PropertyInjection.cs" />
     <Compile Include="DependencyInjection\Using_SimpleInjector_to_inject_Logger.cs" />
+    <Compile Include="IndexExtractors\Roslyn\RoslynAPI_Prototyping.cs" />
+    <Compile Include="IndexExtractors\Roslyn\RoslynParser_ExtractAPI_Tests.cs" />
     <Compile Include="Services\DockerCommandsTests.cs" />
+    <Content Include="TestData\IndexExtractors\Roslyn\WCFServiceContract.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Compile Include="Tika\KeywordParserTests.cs" />
     <Compile Include="FileSystem\ExcludeFileByExtensionFilterTests.cs" />
     <Compile Include="FileSystem\IncludeFileByExtensionFilterTests.cs" />
